fix: add relative positioning to body for absolute footer alignment

--- a/apps/newbie/skilled-elearning-landing-page/src/component.css
+++ b/apps/newbie/skilled-elearning-landing-page/src/component.css
@@ -37,6 +37,12 @@
     font-weight: 700;
     line-height: 1.5;
     cursor: pointer;
+    @variant xl {
+      width: 168px;
+      font-size: 18px;
+      padding-block: 16px;
+      padding-inline: 32px;
+    }
   }
 
   .btn-gt-start-2:hover,
@@ -73,12 +79,11 @@
       padding-top: 64px;
       padding-bottom: 40px;
     }
-    @variant xl{
+    @variant xl {
       width: 352px;
       height: 322px;
       padding-top: 64px;
       padding-bottom: 40px;
-
     }
   }
 
@@ -114,7 +119,7 @@
   }
   .card-in {
     width: 271px;
-    height: auto;
+    height: 196px;
     display: flex;
     flex-direction: column;
     gap: 24px;
@@ -122,14 +127,73 @@
     justify-content: space-between;
     @variant md {
       width: 264px;
+      height: 218px;
     }
     @variant xl {
       width: 288px;
       height: 218px;
-      
     }
   }
 }
 @utility cardshadow {
   box-shadow: 0px 25px 50px rgba(6, 22, 141, 0.0442);
+}
+
+/** FOOTER PERSONAL */
+.site-credits {
+  padding-block: 0.2rem;
+  text-align: center;
+  font-size: clamp(0.75rem, calc(0.58rem + 0.727vw), 1.13rem);
+  border-top: 1px solid var(--color-blue600);  
+}
+.credits-wrapper {
+  display: flex;
+  /* flex-direction: column; */
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  gap: 0 0.3rem;
+  @variant md {
+    flex-direction: row;
+  }
+}
+
+.credit-line {
+  margin: 0;
+  display: inline-flex;
+  flex-wrap: wrap;
+  align-items: baseline;
+  gap: 0.25rem 0.5rem;
+}
+
+.credit-label {
+  color: var(--color-white);
+  font-weight: 500;
+  letter-spacing: -0.2px;
+}
+
+.credit-link {
+  font-size: clamp(0.75rem, calc(0.58rem + 0.727vw), 1.13rem);
+  color: var(--color-pink600);
+  font-weight: 700;
+  text-decoration: none;
+  transition:
+    color 0.2s ease,
+    text-decoration 0.2s;
+}
+
+.credit-link:hover {
+  color: var(--color-pink300);
+}
+
+.year {
+  font-weight: 600;
+  margin-left: 0.1rem;
+  color: var(--color-pink600);
+}
+
+.separator {
+  color: var(--color-white);
+  font-weight: 500;
 }
